ignoring the test files

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 IUT_Academics/4th\ Semester/CSE\ 4404\ Algo\ Lab/
 Competitive\ Programming/_forProblemSolving.cpp
 Competitive\ Programming/.cph
+test.*
